--- a/index.html
+++ b/index.html
@@ -3,47 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>إمبراطورية علوش | V107 👑</title>
+    <title>إمبراطورية علوش | البوت الذكي 👑</title>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@700;900&display=swap');
         :root { --gold: #ffd700; --bg: #0b0b0b; }
-        * { box-sizing: border-box; font-family: 'Cairo', sans-serif; margin: 0; padding: 0; touch-action: manipulation; }
-        body { background: var(--bg); color: white; height: 100vh; display: flex; flex-direction: column; overflow: hidden; position: relative; }
+        * { box-sizing: border-box; font-family: 'Cairo', sans-serif; margin: 0; padding: 0; }
+        body { background: var(--bg); color: white; height: 100vh; display: flex; flex-direction: column; overflow: hidden; }
 
-        /* ستايل المالك */
         .owner-glow { font-weight: 900; text-shadow: 0 0 10px #ff00ea, 0 0 20px #00e1ff; animation: glow 2s infinite alternate; }
+        .header { height: 60px; background: #000; border-bottom: 2px solid var(--gold); display: flex; align-items: center; justify-content: space-between; padding: 0 15px; z-index: 1000; }
+        .h-btn { background: none; border: none; font-size: 26px; color: white; cursor: pointer; }
 
-        /* الهيدر - جعلته في المقدمة */
-        .header { height: 60px; background: #000; border-bottom: 2px solid var(--gold); display: flex; align-items: center; justify-content: space-between; padding: 0 15px; position: relative; z-index: 99999; }
-        .h-btn { background: none; border: none; font-size: 28px; color: white; cursor: pointer; padding: 5px; }
-
-        /* القوائم الجانبية */
-        .side { position: fixed; top: 0; bottom: 0; width: 280px; background: #0e0e0e; z-index: 100000; transition: 0.3s; visibility: hidden; overflow-y: auto; border: 2px solid var(--gold); box-shadow: 0 0 20px rgba(0,0,0,0.5); }
+        .side { position: fixed; top: 0; bottom: 0; width: 280px; background: #0e0e0e; z-index: 10000; transition: 0.3s; visibility: hidden; overflow-y: auto; border: 1px solid var(--gold); }
         #side-r { right: -285px; } #side-l { left: -285px; }
         .side.active { visibility: visible; transform: translateX(0); }
         #side-r.active { transform: translateX(-280px); } #side-l.active { transform: translateX(280px); }
-        
-        /* غطاء شفاف عند فتح القوائم فقط */
-        #overlay { position: fixed; inset: 0; background: rgba(0,0,0,0.7); z-index: 99998; display: none; }
+        #overlay { position: fixed; inset: 0; background: rgba(0,0,0,0.7); z-index: 9000; display: none; }
 
-        /* الشات */
-        #chat-flow { flex: 1; overflow-y: auto; padding: 15px; display: flex; flex-direction: column; gap: 12px; padding-bottom: 120px; z-index: 1; -webkit-overflow-scrolling: touch; }
-        .bubble { background: #1a1a1a; padding: 12px; border-radius: 12px; border-right: 4px solid var(--gold); max-width: 85%; word-break: break-all; }
-        .bot-bubble { border-right-color: #00ffcc !important; background: rgba(0,255,204,0.1) !important; }
-
-        /* الفوتر - منطقة الكتابة */
-        .footer { position: fixed; bottom: 0; left: 0; right: 0; height: 100px; background: #000; border-top: 2px solid var(--gold); display: flex; align-items: center; padding: 0 15px 35px 15px; z-index: 99999; }
-        #msg-in { flex: 1; height: 45px; background: #111; border: 1px solid #444; border-radius: 20px; color: #fff; padding: 0 15px; font-size: 16px; outline: none; }
-        #msg-in:focus { border-color: var(--gold); }
-        .send-btn { background: var(--gold); color: #000; border: none; height: 45px; padding: 0 20px; border-radius: 20px; font-weight: 900; margin-right: 10px; cursor: pointer; }
-
-        /* الملف الشخصي */
         .profile-area { text-align: center; padding: 20px; border-bottom: 1px solid #333; }
-        .av-circle { width: 90px; height: 90px; margin: 0 auto; border-radius: 50%; padding: 3px; background: linear-gradient(45deg, #ff00ea, var(--gold)); cursor: pointer; overflow: hidden; }
+        .av-circle { width: 90px; height: 90px; margin: 0 auto; border-radius: 50%; padding: 3px; background: linear-gradient(45deg, #ff00ea, var(--gold)); cursor: pointer; }
         .av-circle img { width: 100%; height: 100%; border-radius: 50%; object-fit: cover; }
-        .decor-box { width: 100%; padding: 10px; margin-top: 15px; background: #000; border: 1px solid var(--gold); color: var(--gold); border-radius: 8px; text-align: center; }
+        .decor-box { width: 100%; padding: 10px; margin-top: 15px; background: #000; border: 1px solid var(--gold); color: var(--gold); border-radius: 8px; text-align: center; font-weight: bold; }
+
+        #chat-flow { flex: 1; overflow-y: auto; padding: 15px; display: flex; flex-direction: column; gap: 12px; padding-bottom: 120px; }
+        .bubble { background: #1a1a1a; padding: 12px; border-radius: 12px; border-right: 4px solid var(--gold); max-width: 85%; }
+        .bot-bubble { border-right: 4px solid #00ffcc !important; background: rgba(0,255,204,0.05); }
+
+        .footer { position: fixed; bottom: 0; left: 0; right: 0; height: 100px; background: #000; border-top: 1px solid var(--gold); display: flex; align-items: center; padding: 0 15px 35px 15px; z-index: 8000; }
+        #msg-in { flex: 1; height: 45px; background: #111; border: 1px solid #444; border-radius: 20px; color: #fff; padding: 0 15px; }
+        .send-btn { background: var(--gold); color: #000; border: none; height: 45px; padding: 0 20px; border-radius: 20px; font-weight: bold; margin-right: 8px; cursor: pointer; }
     </style>
 </head>
 <body>
@@ -52,13 +42,8 @@
 
 <div class="header">
     <button class="h-btn" onclick="openSide('side-l')">⚙️</button>
-    <div style="color:var(--gold); font-weight:900; font-size:18px;">إمبراطورية علوش</div>
+    <div style="color:var(--gold); font-weight:900;">إمبراطورية علوش</div>
     <button class="h-btn" onclick="openSide('side-r')">👥</button>
-</div>
-
-<div id="side-r" class="side">
-    <h3 style="text-align:center; padding:20px; color:var(--gold); border-bottom:1px solid #222;">👥 المتواجدون</h3>
-    <div id="on-list"></div>
 </div>
 
 <div id="side-l" class="side">
@@ -67,21 +52,27 @@
             <img id="p-img" src="https://cdn-icons-png.flaticon.com/512/3135/3135715.png">
         </div>
         <input type="file" id="f-up" hidden onchange="upImg(this)">
-        <h3 id="p-name" style="margin-top:10px;">علوش</h3>
+        <h3 id="p-name">الاسم</h3>
         <input type="text" id="p-decor" class="decor-box" placeholder="زخرف اسمك هنا.." oninput="updateData()">
     </div>
     <div style="padding:15px;">
-        <button onclick="triggerBot()" style="width:100%; padding:12px; background:var(--gold); border:none; border-radius:8px; font-weight:bold; cursor:pointer;">🏆 طرح مسابقة</button>
-        <div id="adm-box" style="display:none; margin-top:15px;">
-            <button onclick="clearCh()" style="width:100%; padding:12px; background:red; color:white; border:none; border-radius:8px; cursor:pointer;">🧹 تنظيف الشات</button>
+        <p style="color:gray; font-size:12px;">ملاحظة: الأعضاء يمكنهم كتابة "مسابقات" لتشغيل البوت.</p>
+        <button onclick="triggerBot()" style="width:100%; padding:10px; background:var(--gold); border:none; border-radius:5px; font-weight:bold; cursor:pointer; margin-top:10px;">🏆 تشغيل البوت يدوياً</button>
+        <div id="adm-box" style="display:none; margin-top:10px;">
+            <button onclick="clearCh()" style="width:100%; padding:10px; background:red; color:white; border:none; border-radius:5px;">🧹 تنظيف الشات</button>
         </div>
     </div>
+</div>
+
+<div id="side-r" class="side">
+    <h3 style="text-align:center; padding:15px; color:var(--gold);">👤 المتواجدون</h3>
+    <div id="on-list"></div>
 </div>
 
 <div id="chat-flow"></div>
 
 <div class="footer">
-    <input type="text" id="msg-in" placeholder="اكتب رسالتك..." onkeypress="if(event.key==='Enter') sendM()">
+    <input type="text" id="msg-in" placeholder="اكتب رسالتك أو كلمة 'مسابقات'..." onkeypress="if(event.key==='Enter') sendM()">
     <button class="send-btn" onclick="sendM()">إرسال</button>
 </div>
 
@@ -94,59 +85,70 @@
     localStorage.setItem('chat_name', uName);
     let me = { name: uName, decor: "", img: "https://cdn-icons-png.flaticon.com/512/3135/3135715.png" };
 
+    const questions = [
+        "ما هي عاصمة العراق؟", "من هو أسرع حيوان في العالم؟", "كم عدد كواكب المجموعة الشمسية؟",
+        "ما هو أكبر محيط في العالم؟", "ما هو لون الزمرد؟", "من هو مؤسس الدولة الأموية؟",
+        "كم عدد أضلاع المثلث؟", "ما هو الغاز الذي نتنفسه؟", "ما هي عاصمة فرنسا؟",
+        "ما هو أطول نهر في العالم؟", "كم عدد قارات العالم؟", "ما هو أصلب مادة في الطبيعة؟",
+        "كم دقيقة في الساعة؟", "ما هو الحيوان الذي يلقب بسفينة الصحراء؟", "ما هي أكبر دولة في العالم مساحة؟"
+    ];
+
     function init() {
         document.getElementById('p-name').innerText = uName;
         if(uName === "علوش") { document.getElementById('adm-box').style.display = 'block'; document.getElementById('p-name').className = "owner-glow"; }
-        db.ref('v107_on/' + uName).set(me);
-        db.ref('v107_on/' + uName).onDisconnect().remove();
+        db.ref('v106_on/' + uName).set(me);
+        db.ref('v106_on/' + uName).onDisconnect().remove();
     }
     init();
 
-    function updateData() { me.decor = document.getElementById('p-decor').value; db.ref('v107_on/' + uName).update(me); }
-    function upImg(input) { if (input.files && input.files[0]) { let r = new FileReader(); r.onload = e => { me.img = e.target.result; document.getElementById('p-img').src = me.img; db.ref('v107_on/' + uName).update(me); }; r.readAsDataURL(input.files[0]); } }
+    function updateData() { me.decor = document.getElementById('p-decor').value; db.ref('v106_on/' + uName).update(me); }
+    function upImg(input) { if (input.files && input.files[0]) { let r = new FileReader(); r.onload = e => { me.img = e.target.result; document.getElementById('p-img').src = me.img; db.ref('v106_on/' + uName).update(me); }; r.readAsDataURL(input.files[0]); } }
 
     function sendM() {
-        let i = document.getElementById('msg-in'); 
-        if(!i.value.trim()) return;
+        let i = document.getElementById('msg-in'); if(!i.value) return;
         let txt = i.value.trim();
-        db.ref('v107_chat').push({ u: uName, t: txt, d: me.decor, a: me.img });
-        if(txt === "مسابقات" || txt === "اوك") setTimeout(triggerBot, 800);
+        db.ref('v106_chat').push({ u: uName, t: txt, d: me.decor, a: me.img });
+        
+        // فحص الكلمات المفتاحية لتشغيل البوت
+        if(txt === "مسابقات" || txt === "اوك" || txt === "المسابقات") {
+            setTimeout(triggerBot, 1000);
+        }
         i.value = "";
     }
 
     function triggerBot() {
-        const qs = ["عاصمة العراق؟", "أسرع حيوان؟", "أطول نهر؟", "10+10؟"];
-        let q = qs[Math.floor(Math.random()*qs.length)];
-        db.ref('v107_chat').push({ u: "🤖 بوت المسابقات", t: "🎯 سؤال: " + q, d: "【برق】", a: "https://cdn-icons-png.flaticon.com/512/4712/4712035.png", isBot: true });
+        let q = questions[Math.floor(Math.random() * questions.length)];
+        db.ref('v106_chat').push({ u: "🤖 بوت المسابقات", t: "🎯 سؤال جديد: " + q, d: "【برق】", a: "https://cdn-icons-png.flaticon.com/512/4712/4712035.png", isBot: true });
     }
 
-    function clearCh() { if(confirm("هل تريد مسح الرسائل؟")) db.ref('v107_chat').remove(); }
+    function clearCh() { if(confirm("مسح الشات؟")) db.ref('v106_chat').remove(); }
 
-    db.ref('v107_chat').on('child_added', s => {
+    db.ref('v106_chat').on('child_added', s => {
         let d = s.val(); let isO = d.u === "علوش";
         let div = document.createElement('div');
-        div.style.display="flex"; div.style.gap="8px"; div.style.marginBottom="12px";
-        div.innerHTML = `<img src="${d.a}" style="width:35px; height:35px; border-radius:50%; border:1px solid gold;">
+        div.style.display="flex"; div.style.gap="8px"; div.style.marginBottom="10px";
+        div.innerHTML = `
+            <img src="${d.a}" style="width:35px; height:35px; border-radius:50%; border:1px solid ${d.isBot?'#00ffcc':'gold'};">
             <div class="bubble ${d.isBot?'bot-bubble':''}">
                 <b class="${isO?'owner-glow':''}" style="color:${d.isBot?'#00ffcc':(isO?'':'gold')}">${isO?'👑 علوش':(d.d+' '+d.u+' '+d.d)}</b>
-                <p style="margin-top:4px;">${d.t}</p>
+                <p>${d.t}</p>
             </div>`;
         document.getElementById('chat-flow').appendChild(div);
         document.getElementById('chat-flow').scrollTop = document.getElementById('chat-flow').scrollHeight;
     });
 
-    db.ref('v107_chat').on('child_removed', () => document.getElementById('chat-flow').innerHTML = "");
+    db.ref('v106_chat').on('child_removed', () => document.getElementById('chat-flow').innerHTML = "");
 
-    db.ref('v107_on').on('value', s => {
+    db.ref('v106_on').on('value', s => {
         let l = document.getElementById('on-list'); l.innerHTML = "";
-        l.innerHTML += `<div style="padding:12px; color:#00ffcc;">🤖 بوت الإمبراطورية</div>`;
+        l.innerHTML += `<div style="padding:10px; color:#00ffcc;">🤖 بوت المسابقات</div>`;
         s.forEach(u => {
             let usr = u.val(); let isO = u.key === "علوش";
-            l.innerHTML += `<div style="padding:12px; border-bottom:1px solid #111;" class="${isO?'owner-glow':''}">● ${isO?'👑 علوش':(usr.decor+' '+u.key+' '+usr.decor)}</div>`;
+            l.innerHTML += `<div style="padding:10px; border-bottom:1px solid #222;" class="${isO?'owner-glow':''}">● ${isO?'👑 علوش':(usr.decor+' '+u.key+' '+usr.decor)}</div>`;
         });
     });
 
-    function openSide(id) { document.getElementById(id).classList.add('active'); document.getElementById('overlay').style.display = 'block'; }
+    function openSide(id) { closeSides(); document.getElementById(id).classList.add('active'); document.getElementById('overlay').style.display = 'block'; }
     function closeSides() { document.querySelectorAll('.side').forEach(s => s.classList.remove('active')); document.getElementById('overlay').style.display = 'none'; }
 </script>
 </body>
